# ZprimeCombo13TeV

./: README.md  combination_zph.py
theta/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  Makefile  Makefile.options  Makefile.rules
theta/amdlibm/.svn/: all-wcprops  entries
theta/doc/: tabs.css
theta/doc/.svn/: all-wcprops  entries
theta/doc/logos/: theta.eps
theta/examples/: CountingExp.cfg  convert_database.cfg  execute-all.sh  gaussoverflat-cls2-reuse0.cfg  gaussoverflat-cls2-reuse1.cfg  gaussoverflat-cls2.cfg  gaussoverflat-database.cfg  gaussoverflat-histomorph.cfg  gaussoverflat-intervals2.cfg  gaussoverflat-mcmc_chain_txt.cfg  gaussoverflat-mcmc_histo.cfg  gaussoverflat-mle.cfg  gaussoverflat-nll_scan.cfg  gaussoverflat.cfg
theta/examples/.svn/: all-wcprops  entries
theta/examples/paper/: README
theta/gridpack/: build.sh  clean.sh
theta/gridpack/.svn/: all-wcprops  entries
theta/interface/: asimov-utils.hpp  data.hpp  database.hpp  decls.hpp  distribution.hpp  exception.hpp  histogram-function.hpp  log2_dot.hpp  main.hpp  matrix.hpp  plugin.hpp  plugin.tcc  pm.hpp  redirect_stdio.hpp  run_mt.hpp  utils.hpp  variables.hpp
theta/interface/.svn/: all-wcprops  entries
theta/lib/.svn/: all-wcprops  entries
theta/libconfig/: ac_config.h  libconfig.h++
theta/libconfig/.bin/: grammar.d  libconfig.d  libconfigcpp.d  scanctx.d  scanner.d  strbuf.d
theta/libconfig/.svn/: all-wcprops  entries
theta/liblbfgs/: lbfgs.c  lbfgs.h  lbfgs_minimizer.cpp  lbfgs_minimizer.hpp
theta/liblbfgs/.svn/: all-wcprops  entries
theta/llvm/: Makefile  llvm_cubiclinear_histomorph.cpp  llvm_cubiclinear_histomorph.hpp  llvm_exp_function.cpp  llvm_exp_function.hpp  llvm_interface.hpp  llvm_multiply.hpp
theta/llvm/.svn/: all-wcprops  dir-prop-base  entries
theta/plugins/: CMakeLists.txt  bw_gauss.cxx  cls_limits.cpp  cls_limits.hpp  convert_database.cpp  core.cpp  core.hpp  cubiclinear_histomorph.cpp  cubiclinear_histomorph.hpp  deltanll_hypotest.cpp  deltanll_intervals.hpp  direct_data_histo.cpp  direct_data_histo.hpp  equidistant_deltas.hpp  exponential_hf.hpp  gamma_distribution.cpp  gamma_distribution.hpp  igauss.cpp  linear-histo-morph.hpp  mcmc-strategies.cpp  mcmc_chain.cpp  mcmc_minimizer.hpp  mcmc_posterior_histo.hpp  mcmc_posterior_ratio.hpp  mcmc_quantiles.cpp  minimizer_chain.cpp  multiplexing_database.hpp  multiply.cpp  multiply.hpp  newton.cpp  neyman_belt.cpp  nl_gauss.hpp  nl_one_over_sqrt.cpp  nll_der.hpp  nll_scan.cpp  nll_scan.hpp  pseudodata_writer.cpp  reduced_nll.hpp  simple_linear_histomorph.hpp  sqlite_database.cpp  (+3 more)
theta/plugins/.bin/: add.d  add_sources.d  asymptotic_cls.d  blackhole_database.d  cls_limits.d  constrain_ratio.d  convert_database.d  core.d  cubiclinear_histomorph.d  deltanll_hypotest.d  deltanll_intervals.d  direct_data_histo.d  equidistant_deltas.d  exp_function.d  exponential_hf.d  gamma_distribution.d  histo_source.d  igauss.d  interpolating-histogram.d  linear-histo-morph.d  mcmc-strategies.d  mcmc_chain.d  mcmc_mean_prediction.d  mcmc_minimizer.d  mcmc_posterior_histo.d  mcmc_posterior_ratio.d  mcmc_quantiles.d  minimizer_chain.d  mle.d  multiplexing_database.d  multiply.d  newton-utils.d  newton.d  neyman_belt.d  nl_gauss.d  nl_one_over_sqrt.d  nll_der.d  nll_scan.d  pseudodata_writer.d  replay_toys.d  (+6 more)
theta/plugins/.svn/: all-wcprops  entries
theta/root/: CMakeLists.txt  Makefile  README  create_testhistos.cxx  root_minuit.hpp  rootfile_database.cpp  rootfile_database.hpp
theta/root/.bin/: histos.d  root_histogram.d  root_minuit.d  root_minuit1.d  root_ntuple_source.d  rootfile_database.d
theta/root/.svn/: all-wcprops  entries
theta/src/: atomic.cxx  atomic_asserts.cxx  cfg-utils.cpp  exception.cpp  mcmc.cpp  random-utils.cpp  run.cpp  run_mt.cpp  toymaker.cpp
theta/src/.bin/: asimov-utils.d  cfg-utils.d  database.d  distribution.d  exception.d  histogram-function.d  histogram-with-uncertainties.d  histogram.d  log2_dot.d  main.d  matrix.d  mcmc.d  minimizer.d  model.d  phys.d  plugin.d  producer.d  random-utils.d  random.d  redirect_stdio.d  run.d  run_mt.d  toymaker.d  utils.d  variables.d
theta/src/.svn/: all-wcprops  dir-prop-base  entries
theta/tbb/: tbb_model.cpp
theta/tbb/.svn/: all-wcprops  entries
theta/test/: test-cfg.cpp  test-codegen.cpp  test-ex.cxx  test-ex2.cxx  test-ex3.cxx  test-functions.cpp  test-histogram.cpp  test-minimizer.cpp  test-model.cpp  test-mt.cpp  test-newton.cpp  test-variables.cpp  testall.sh  utils.cpp  utils.hpp
theta/test/.svn/: all-wcprops  entries
theta/test/test-stat/: README  counting-fixedbkg-mcmc_quant.cfg  counting-fixedbkg-mle.cfg  counting-nobkg-mle.cfg  (+6 more)
theta/utils2/: theta-auto.py
(+481 files in other folders)
